# crypto-defi-mcp

./: .env.example  .gitignore  .prettierrc.js  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  server.json  tsconfig.json  vercel.json
.github/: FUNDING.yml
api/: mcp.ts
docs/: mkdocs.yml
docs/docs/: SperaxOS.md  index.md
docs/docs/concepts/: index.md  security-scanner.md
docs/docs/contracts/: abis.md  index.md
docs/docs/guides/: index.md  web-builder.md
docs/docs/mcp-server/: development.md  evm-module.md  greenfield-module.md  index.md  resources-prompts.md  tools-extended.md  tools.md
docs/docs/protocol/: addresses.md  collateral-manager.md  demeter-farms.md  errors-events.md  index.md  oracles.md  overview.md  rebase-dripper.md  rewarder.md  spa-buyback.md  spa-staking.md  strategies.md  usds-token.md  vault-core.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/api/: index.html
docs/site/api/cli/: index.html
docs/site/api/core/: index.html
docs/site/api/fetchers/: index.html
docs/site/api/generator/: index.html
docs/site/api/mapper/: index.html
docs/site/api/parser/: index.html
docs/site/api/runtime/: index.html
docs/site/api/utils/: index.html
docs/site/changelog/: index.html
docs/site/cli/: index.html
docs/site/cli/generate/: index.html
docs/site/cli/inspect/: index.html
docs/site/cli/serve/: index.html
docs/site/cli/validate/: index.html
docs/site/concepts/: index.html
docs/site/concepts/events/: index.html
docs/site/concepts/safety/: index.html
docs/site/concepts/security-scanner/: index.html
docs/site/concepts/tool-types/: index.html
docs/site/concepts/type-mapping/: index.html
docs/site/contributing/: index.html
docs/site/contributing/development/: index.html
docs/site/contributing/testing/: index.html
docs/site/getting-started/: index.html
docs/site/getting-started/first-server/: index.html
docs/site/getting-started/installation/: index.html
docs/site/getting-started/quickstart/: index.html
docs/site/guides/: index.html
docs/site/guides/claude-desktop/: index.html
docs/site/guides/custom-network/: index.html
docs/site/guides/defi-protocol/: index.html
docs/site/guides/erc20-token/: index.html
docs/site/guides/nft-collection/: index.html
docs/site/guides/web-builder/: index.html
docs/site/reference/: index.html
docs/site/reference/erc-standards/: index.html
docs/site/reference/errors/: index.html
docs/site/reference/networks/: index.html
docs/site/reference/type-table/: index.html
docs/site/search/: search_index.json
src/: index.ts
src/evm/: chains.ts  index.ts
src/evm/modules/blocks/: index.ts  prompts.ts  tools.ts
src/evm/modules/common/: types.ts
src/evm/modules/contracts/: index.ts  prompts.ts  tools.ts
src/evm/modules/network/: index.ts  prompts.ts  tools.ts
src/evm/services/: balance.ts  blocks.ts  clients.ts  contracts.ts  ens.ts  index.ts  tokens.ts  transactions.ts  transfer.ts  utils.ts
src/gnfd/: constants.ts  index.ts  prompts.ts  util.ts
src/gnfd/services/: account.ts  basic.test.ts  bucket.test.ts  bucket.ts  client.ts  common.ts  index.ts  object.test.ts  object.ts  payment.test.ts  payment.ts  sp.ts
src/gnfd/tools/: account.ts  common.ts  index.ts  payment.ts  storage.ts
src/server/: base.ts  sse.ts  stdio.ts
src/sperax/: blockchain.ts  config.ts  index.ts  prompts.ts  resources.ts  utils.ts
src/sperax/tools/: agents.ts  analytics.ts  demeter.ts  dripper.ts  governance.ts  index.ts  news.ts  oracle.ts  plugins.ts  portfolio.ts  spa.ts  subgraph.ts  supply.ts  swap.ts  usds.ts  vault.ts  yield-reserve.ts
src/utils/: helper.ts  logger.ts
web/: README.md  package-lock.json  package.json  vercel.json
web-v2/: README.md
web-v2/src/app/: page.tsx
web/public/: robots.txt  site.webmanifest
web/src/app/: layout.tsx  page.tsx  sitemap.ts
web/src/components/: contract-analyzer.tsx  providers.tsx
web/src/lib/: contract-whisperer.ts  generator.ts  networks.ts  security-scanner.ts  templates.ts  wagmi.ts
(+22 files in other folders)
